--- a/src/dashboard/dashboard.css
+++ b/src/dashboard/dashboard.css
@@ -13,4 +13,27 @@
   box-shadow: 3px 3px 15px #ccc;
   width: 500px;
   height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttonContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button {
+  width: 150px;
+  height: 50px;
+  display: flex;
+  margin: 10px;
+  background: white;
+  box-shadow: 3px 3px 15px #ccc;
+  align-items: center;
+  justify-content: center;
+}
+.button:hover {
+  box-shadow: 3px 3px 30px #ccc;
 }
